<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/settings_activity_label"
  >

	<ListPreference
	    android:key="timer_usage"
	    android:title="@string/preference_timer_usage_title"
	    android:summary="@string/preference_timer_usage_summary"
	    android:entries="@array/preference_timer_usage_entries"
	    android:entryValues="@array/preference_timer_usage_entryvalues"
	    android:dialogTitle="@string/preference_timer_usage_dialog_title"
	    android:defaultValue="on_wifi_deactivation"
	    android:persistent="true"
	     />

<!-- 	<ListPreference -->
<!-- 	    android:key="timer_default_laps" -->
<!-- 	    android:title="@string/title_list_preference" -->
<!-- 	    android:summary="@string/summary_list_preference" -->
<!-- 	    android:entries="@array/entries_list_preference" -->
<!-- 	    android:entryValues="@array/entryvalues_list_preference" -->
<!-- 	    android:dialogTitle="@string/dialog_title_list_preference" /> -->
    
</PreferenceScreen>
